syntax = "proto3";

package post;

option go_package = "github.com/hoshibmatchi/post-service/proto";

// Import user.proto so we can use its types if needed
// (We don't need it for this, but it's good practice
import "user.proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);

  rpc LikePost (LikePostRequest) returns (LikePostResponse);
  rpc UnlikePost (LikePostRequest) returns (UnlikePostResponse);
  rpc CommentOnPost (CommentOnPostRequest) returns (CommentResponse);
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc GetHomeFeed (GetHomeFeedRequest) returns (GetHomeFeedResponse);
  rpc GetExploreFeed (GetHomeFeedRequest) returns (GetHomeFeedResponse);
  rpc GetReelsFeed (GetHomeFeedRequest) returns (GetHomeFeedResponse);
}

// Data from the API Gateway
message CreatePostRequest {
  int64 author_id = 1; // This will come from the JWT token
  string caption = 2;
  repeated string media_urls = 3;
  bool comments_disabled = 4;
  bool is_reel = 5;
}

// The created Post
message Post {
  string id = 1;
  string caption = 2;
  
  // Denormalized data from user-service
  string author_username = 3;
  string author_profile_url = 4;
  bool author_is_verified = 5;
  
  repeated string media_urls = 6;
  string created_at = 7;

  bool is_reel = 8;
}

message CreatePostResponse {
  Post post = 1;
}

// --- Like / Unlike a Post ---
message LikePostRequest {
  int64 user_id = 1; // From JWT
  int64 post_id = 2; // From URL
}
message LikePostResponse {
  string message = 1; // "Post liked"
}
message UnlikePostRequest {
  int64 user_id = 1; // From JWT
  int64 post_id = 2; // From URL
}
message UnlikePostResponse {
  string message = 1; // "Post unliked"
}

// --- Comment on a Post ---
message CommentOnPostRequest {
  int64 user_id = 1; // From JWT
  int64 post_id = 2; // From URL
  string content = 3; // Text or GIF URL
  int64 parent_comment_id = 4; // 0 for a top-level comment
}
// Response for a comment includes denormalized data
message CommentResponse {
  string id = 1;
  string content = 2;
  string author_username = 3;
  string author_profile_url = 4;
  string created_at = 5;
  int64 post_id = 6;
  int64 parent_comment_id = 7;
}

// --- Delete a Comment ---
message DeleteCommentRequest {
  int64 user_id = 1; // From JWT (to verify ownership)
  int64 comment_id = 2; // From URL
}
message DeleteCommentResponse {
  string message = 1; // "Comment deleted"
}

// --- Get Home Feed ---
message GetHomeFeedRequest {
  int64 user_id = 1; // From JWT
  int32 page_size = 2; // For pagination
  int32 page_offset = 3; // For pagination
}

// We can re-use the Post message we already defined
message GetHomeFeedResponse {
  repeated Post posts = 1;
}